# devtool

./: .devtool.toml.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
devtool/: __init__.py  config.py  container.py  fix_ui.py  interfaces.py  main.py  prompts.py  stream.py  test_config.py  test_git_utils.py  test_main.py  test_ollama_client.py  test_stream.py  test_view.py  view.py
devtool/commands/: _rag_helpers.py  commit.py  debug_ollama.py  docgen.py  pre_review.py  rag.py  repo_analysis.py  sec_audit.py  testgen.py
devtool/services/: faiss_store.py  generation_service.py  patch_service.py  rag_service.py
devtool/utils/: common.py  docgen_utils.py  git_utils.py  language_utils.py  ollama_client.py  path_utils.py
tests/: conftest.py  test_cmd_commit.py  test_cmd_pre_review.py  test_cmd_sec_audit.py  test_config.py  test_interfaces.py  test_multi_model.py  test_ollama_client.py  test_patch_service.py  test_rag_service.py  test_stream.py
