[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devtool"
version = "0.1.0-alpha2"
description = "A privacy-first, local CLI tool powered by Ollama"
authors = [{name = "AI Developer"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "requests",
    "rich",
    "tomli; python_version < '3.11'",
    "faiss-cpu",
    "numpy",
]

[project.scripts]
devtool = "devtool.main:app"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock"
]
